@@ -78,6 +78,28 @@ static void nm_connection_editor_set_connection (NMConnectionEditor *editor,
 static void update_connection (NMExportedConnection *exported);
 
 static void
+show_error_dialog (const gchar *format, ...)
+{
+	GtkWidget *dialog;
+	va_list args;
+	char *msg;
+
+	va_start (args, format);
+	msg = g_strdup_vprintf (format, args);
+	va_end (args);
+
+	dialog = gtk_message_dialog_new (NULL,
+							   GTK_DIALOG_DESTROY_WITH_PARENT,
+							   GTK_MESSAGE_ERROR,
+							   GTK_BUTTONS_CLOSE,
+							   msg);
+	g_free (msg);
+
+	gtk_dialog_run (GTK_DIALOG (dialog));
+	gtk_widget_destroy (dialog);
+}
+
+static void
 dialog_response_cb (GtkDialog *dialog, guint response, gpointer user_data)
 {
 	gtk_widget_hide (GTK_WIDGET (dialog));
@@ -428,10 +450,10 @@ update_connection_auth_cb (PolKitAction *action,
 	if (gained_privilege)
 		update_connection (exported);
 	else if (error) {
-		g_warning ("Could not obtain required privileges: %s", error->message);
+		show_error_dialog (_("Could not obtain required privileges: %s."), error->message);
 		g_error_free (error);
 	} else
-		g_warning ("Could not update system connection, permission denied");
+		show_error_dialog (_("Could not update system connection: permission denied."));
 
 	g_object_unref (exported);
 }
@@ -479,7 +501,7 @@ update_connection (NMExportedConnection *exported)
 
  out:
 	if (err) {
-		g_warning ("Updating the connection failed: %s", err->message);
+		show_error_dialog (("Updating the connection failed: %s."), err->message);
 		g_error_free (err);
 	}
 }
